apply plugin: 'com.android.application'
apply plugin: 'android-apt'
apply plugin: 'realm-android'
apply plugin: 'me.tatarka.retrolambda'


def placeholders = getManifestPlaceholders();

android {
    compileSdkVersion 25
    buildToolsVersion "25.0.0"

    defaultConfig {
        applicationId "com.zombispormedio.assemble"
        minSdkVersion 19
        targetSdkVersion 25
        versionCode 1
        versionName "1.1"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        manifestPlaceholders = placeholders
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    testOptions {
        unitTests.all {
            jvmArgs '-XX:MaxPermSize=256m'
        }
    }

    lintOptions {
        abortOnError false
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

}

dependencies {

    compile fileTree(dir: 'libs', include: ['*.jar'])
    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    compile 'com.android.support:appcompat-v7:25.0.0'
    compile 'com.android.support:design:25.0.0'
    compile 'com.android.support:support-v4:25.0.0'
    compile 'com.android.support:cardview-v7:25.0.0'
    compile 'com.android.support:recyclerview-v7:25.0.0'
    testCompile 'junit:junit:4.12'

    compile 'com.onesignal:OneSignal:3.4.0@aar'

    compile 'com.google.android.gms:play-services-gcm:9.8.00'

    compile "com.google.android.gms:play-services-location:9.8.00"

    compile 'com.google.dagger:dagger:2.0'

    compile 'com.squareup.picasso:picasso:2.5.2'
    compile 'com.squareup.okhttp3:okhttp:3.4.1'
    compile 'com.squareup.moshi:moshi:1.2.0'

    compile 'com.jakewharton:butterknife:8.4.0'

    compile 'com.annimon:stream:1.1.2'

    compile 'net.danlew:android.joda:2.9.4.2'
    compile 'com.github.varunest:sparkbutton:1.0.2'
    compile 'com.github.rubensousa:BottomSheetBuilder:1.1'
    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'

    compile 'com.orhanobut:logger:1.15'

    apt 'com.jakewharton:butterknife-compiler:8.4.0'
    apt 'com.google.dagger:dagger-compiler:2.0'
    provided 'org.glassfish:javax.annotation:10.0-b28'
}


def getManifestPlaceholders() {

    def Properties props = new Properties()
    def propFile = file('./env.properties')
    def oneSignalID = "";
    def googleNumber = 0;

    if (propFile.canRead()) {
        props.load(new FileInputStream(propFile))

        if (props != null) {

            oneSignalID = props['one_signal_id']
            googleNumber = props['google_id']
        }
    }
    return [onesignal_app_id: oneSignalID, onesignal_google_project_number: googleNumber]

}
